# xstudio

./: CMakeLists.txt
cmake/: macros.cmake
docs/: CMakeLists.txt
src/: CMakeLists.txt
src/audio/src/: CMakeLists.txt
src/embedded_python/src/: CMakeLists.txt
src/launch/xstudio/src/: CMakeLists.txt
src/plugin/media_reader/ffmpeg/src/: CMakeLists.txt
src/timeline/src/: CMakeLists.txt
src/utility/src/: CMakeLists.txt
